--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
      <ul>
-       <li>Enter your JavaScript notes here</li>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
+      <li>Note that a variable must be defined before it can be referenced: see note above.</li> 
+      <li>Lines all end with semi-colons.</li>
+      <li>Functions do not activate automatically and must be called upon.</li>
+
      </ul>
       </section>
     </main>
